force-app/main/default/objects/Parcela__c/Parcela__c.object-meta.xml
<CustomObject>
    <label>Parcela</label>
    <nameField>
        <label>Número da Parcela</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcelas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>