force-app/main/default/objects/Parcela__c/fields/Data_Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_Vencimento__c</fullName>
    <label>Data_Vencimento</label>
    <type>Date</type>
</CustomField>